# Inkwell

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20250822101711_create_posts_table.sql  20250822121224_create_comments_table.sql  20250823160714_create_users_table.sql
src/: config.rs  docs.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  utils.rs  validation.rs
src/handlers/: auth.rs  comments.rs  mod.rs  posts.rs
tests/: auth.rs  comments.rs  posts.rs
tests/common/: mod.rs
