[package]
name = "Inkwell"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono" ] }

chrono = { version = "0.4.41", features = ["serde"] }

utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.0"
thiserror = "2.0.9"
